# rdkit

./: cibuildwheel.toml  compile_flags.txt  pyproject.toml
.github/scripts/: repair_linux_wheel.sh
.github/workflows/: wheels-rdkit-typer.yml
Code/GraphMol/: CMakeLists.txt
Code/GraphMol/AtomTyper/: CMakeLists.txt  ValidationPatterns.csv  atom_typer.cpp  atom_typer.hpp  atom_typer_query_reorder.cpp  atom_typer_query_reorder.hpp  expression_builder.cpp  expression_builder.hpp  mechanism_reactants.csv  noncanon_efg_templates_20240108.csv  parser.cpp  parser.h  rxn_backend_min.cpp  smarts_analyzer.cpp  smarts_analyzer.hpp  smarts_analyzer_matchset_smoke.cpp  smarts_analyzer_mechs_smoke.cpp  smarts_analyzer_smoke.cpp  smarts_analyzer_smoke_benchmark.hpp  test_atom_typer.cpp  test_expression_builder.cpp  test_smarts_analyzer.cpp  unitTests.cpp
Code/GraphMol/AtomTyper/Wrap/: CMakeLists.txt  rdAtomTyper.cpp  wrap.cpp
Code/GraphMol/ChemReactions/Enumerate/: Enumerate.cpp
conda-recipe/: README.md  build.sh  meta.yaml
rdkit/Chem/: __init__.py
